proj1/proj1-svc-np.yml
apiVersion: v1
kind: Service
metadata:
  name: proj1-svc-np
spec:
  type: NodePort
  ports:
  - port: 80
	targetPort: 8080
	nodePort: 31111
  selector:
	app: proj1-rs
