proj1/svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb-svc-lb
  annotations:
    #service.beta.kubernetes.io/aws-load-balancer-type: nlb
    #service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
   type: LoadBalancer
   ports:
   - port: 80
     targetPort: 8080
   selector:
     app: myweb-r
