proj1/ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: myweb-ing
 annotations:
 kubernetes.io/ingress.class: alb
 alb.ingress.kubernetes.io/target-type: instance
 alb.ingress.kubernetes.io/scheme: internet-facing
spec:
 rules:
 - http:
 paths:
 - path: /
 backend:
 serviceName: myweb-svc-np
 servicePort: 80
